--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,5 +1,4 @@
 html, body {
-	height: 100%;
 	width: 100%;
 	padding: 0;
 	margin: 0;
@@ -10,6 +9,11 @@ html, body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+body {
+	display: flex;
+	justify-content: center;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -17,4 +21,11 @@ html, body {
 p {
 	font-family: monospace;
 	color: #414603;
+}
+
+.Container {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
